(+) cmake creates compile_commands.json for vscode
clangd uses compile_commands.json for intelisence.
this file is created in cmake's build which is ./build/Debug or
./build/Release. clangd can't find it there, so we copy it to ./build
where it can find it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project(
 option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
 option(ENABLE_TEST_COVERAGE "Enable test coverage" OFF)
 option(CTEST_OUTPUT_ON_FAILURE "On test failure, print out its full output" ON)
+option(CMAKE_EXPORT_COMPILE_COMMANDS "Export compile commands" ON)
 
 # set(CMAKE_CXX_STANDARD 17) # this is set at env/profiles/cpp.profile
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -19,8 +20,9 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # cmake modules
 include(CTest)
 include(cmake/CPM.cmake)
-include(cmake/tools.cmake)
 include(cmake/PreventInSourceBuilds.cmake)
+include(cmake/tools.cmake)
+include(cmake/helpers.cmake)
 
 # deps
 # use CPM for import of internal cmake based projects
