(+) add support for building to web assembly
1. Add `--profile` to `build.sh`
   You can build to `native`(linux) or `wasm`.
   `wasm` module is run from nodejs.
2. Add `--clean` to `build.sh`
   Delete the build folder before building
3. A lot of other refactorings that I wish
   I would have done more proffecianly in a separte commits :-|

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,14 @@ install_compile_commands_json(starterkit-tests)
 install(TARGETS starterkit-tests RUNTIME DESTINATION tests)
 
 include(doctest)
-doctest_discover_tests(starterkit-tests)
+
+if(EMSCRIPTEN)
+  message(STATUS "Building Emscripten tests")
+  add_test(NAME starterkit-tests COMMAND node ${CMAKE_CURRENT_BINARY_DIR}/starterkit-tests.js)
+else()
+  message(STATUS "Building native tests")
+  doctest_discover_tests(starterkit-tests)
+endif()
 
 # enable compiler warnings
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
