(+) support debug of `conan build ...`
In VSCode, you can now debug the run of Conan to build the project.
Choose `conanfile.py` in the combo box, at the top of the Debugger pane.
You can put breakpoints in `conanfile.py` to track Conan's build
process.
Change the command line params in `launch.json`.
The build process is done in `build.sh` but it is really just Conan's
[Package Development Flow](https://docs.conan.io/2/tutorial/developing_packages/local_package_development_flow.htm).

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "conanfile.py",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "conans.conan",
+      "justMyCode": true,
+      "args": [
+        "build",
+        ".",
+        "--build=missing",
+        "-pr:b",
+        "./env/profiles/native.profile",
+        "-pr:h",
+        "./env/profiles/native.profile",
+        "-s:a",
+        "build_type=Debug"
+      ]
+    },
+    {
       "name": "CMake Target",
       "type": "cppdbg",
       "request": "launch",
