(~) move 'cmake' folder to env, move private scripts to their own folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,10 +23,10 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
 
 # cmake modules
 include(CTest)
-include(cmake/CPM.cmake)
-include(cmake/PreventInSourceBuilds.cmake)
-include(cmake/tools.cmake)
-include(cmake/helpers.cmake)
+include(env/cmake/CPM.cmake)
+include(env/cmake/PreventInSourceBuilds.cmake)
+include(env/cmake/tools.cmake)
+include(env/cmake/helpers.cmake)
 
 # deps
 # use CPM for import of internal cmake based projects
