(+) support devcontainers development env
Add a Dev Container dev-env supprt.
This is a Docerfile + configuration JSON file.
In VSCode: Ctrl+Shift+P: Dev Containers: Open Workspace in Container
In GitHub: Repo/Green Button "Code"/Codespaces

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,27 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "CMake Target",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${command:cmake.launchTargetPath}",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "/usr/bin/gdb",
+      "setupCommands": [
+        {
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
+        }
+      ],
+      "preLaunchTask": "${defaultBuildTask}",
+    },
+    {
       "name": "conanfile.py",
       "type": "debugpy",
       "request": "launch",
@@ -22,26 +43,5 @@
         "build_type=Debug"
       ]
     },
-    {
-      "name": "CMake Target",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "${command:cmake.launchTargetPath}",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": false,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "${defaultBuildTask}",
-      "miDebuggerPath": "/usr/bin/gdb"
-    }
   ]
 }
