--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,4 @@ default-groups = ["dev", "lint"]
 
 [dependency-groups]
 dev = ["cmake>=3.30.0", "conan>=2.15.0", "ninja>=1.10.0"]
-lint = ["clang-format>=20.1.0", "cmakelang[yaml]>=0.6.13"]
+lint = ["clang-format>=20.1.0", "cmakelang[yaml]>=0.6.13", "pre-commit>=4.2.0"]
