--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,3 +58,35 @@ repos:
     rev: v1.31.1
     hooks:
       - id: typos
+  # - repo: https://github.com/Takishima/cmake-pre-commit-hooks
+  #   rev: v1.9.6
+  #   hooks:
+  #     - id: clang-format
+  #       args: [--style=GNU] # Other coding style: LLVM, Google, Chromium, Microsoft, Mozilla, WebKit.
+  #     - id: clang-tidy
+  #       args: [--checks=readability-magic-numbers, --warnings-as-errors=*]
+  #     - id: cppcheck
+  #     - id: include-what-you-use
+  # - repo: https://github.com/cmake-lint/cmake-lint
+  #   rev: 1.4.3
+  #   hooks:
+  #     - id: cmakelint
+  #       exclude: (env/cmake/3rd/.*)
+  #       args: [--linelength=100]
+  # - repo: https://github.com/pocc/pre-commit-hooks
+  #   rev: v1.3.5
+  #   hooks:
+  #     - id: clang-format
+  #       args: [--style=GNU] # Other coding style: LLVM, Google, Chromium, Microsoft, Mozilla, WebKit.
+  #     - id: clang-tidy
+  #     - id: oclint
+  #     - id: uncrustify
+  #     - id: cppcheck
+  #     - id: cpplint
+  #     - id: include-what-you-use
+  # - repo: https://github.com/cpp-linter/cpp-linter-hooks
+  #   rev: v0.6.1
+  #   hooks:
+  #     - id: clang-format
+  #       args: [--style=GNU] # Other coding style: LLVM, Google, Chromium, Microsoft, Mozilla, WebKit.
+  #     - id: clang-tidy
